k8s/using-local-disk/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pg-dev-stripprefix
  namespace: pg-dev

spec:
  stripPrefix:
    prefixes:
      - /pg-dev
