k8s/using-local-disk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pg-agents
  labels:
    environment: dev
