k8s/using-local-disk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-agents-deployment
  namespace: pg-agents
  labels:
    app: postgres
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        environment: dev
    spec:
      nodeSelector:
        kubernetes.io/hostname: asp-node-01 
      containers:
      - name: postgres
        image: postgres:18.1
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-agents-pvc
