k8s/using-local-disk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-agentssvc
  namespace: pg-agents
  labels:
    app: postgres
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres
