k8s/using-local-disk/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres-ingress-route
  namespace: pg-dev
spec:
  routes:
    - match: PathPrefix(`/pg-dev`)
      kind: Rule
      services:
        - name: stores-service-svc 
          port: 5432
      middlewares:
        - name: pg-dev-stripprefix
