k8s/using-local-disk/ingressroutetcp.yaml
# Decided to use service of type load balancer

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-agents-tcp
  namespace: pg-agents
spec:
  entryPoints:
    - postgres-agents-tcp
  routes:
    - match: HostSNI(`*`) 
      services:
        - name: postgres-agents-svc
          port: 5433
